versions/3.5.1/docs/MediaRootPermissionAccessOptions.md
# MediaRootPermissionAccessOptions


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**show_tags** | **bool** |  | [optional] 
**show_comments** | **bool** |  | [optional] 
**show_locations** | **bool** |  | [optional] 
**show_custom_fields** | **bool** |  | [optional] 
**show_ratings** | **bool** |  | [optional] 
**show_subclips** | **bool** |  | [optional] 
**show_subtitles** | **bool** |  | [optional] 
**show_ai_metadata** | **bool** |  | [optional] 
**show_markers** | **bool** |  | [optional] 
**show_history** | **bool** |  | [optional] 
**allow_read** | **bool** |  | [optional] 
**allow_create** | **bool** |  | [optional] 
**allow_write_fs** | **bool** |  | [optional] 
**allow_write_db** | **bool** |  | [optional] 
**allow_proxy_download** | **bool** |  | [optional] 
**allow_original_download** | **bool** |  | [optional] 
**allow_upload** | **bool** |  | [optional] 
**allow_sharing** | **bool** |  | [optional] 
**allow_delete_fs** | **bool** |  | [optional] 
**allow_delete_db** | **bool** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


